--- a/modules/apps/foundation/portal-search/portal-search-elasticsearch/build.gradle
+++ b/modules/apps/foundation/portal-search/portal-search-elasticsearch/build.gradle
@@ -1,4 +1,5 @@
-String elasticsearchVersion = "2.2.0"
+String elasticsearchVersion = "2.4.0"
+String luceneVersion = "5.5.2"
 
 configurations {
 	elasticsearchPlugins {
@@ -13,7 +14,6 @@ dependencies {
 	compileInclude group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-smile", version: "2.6.2"
 	compileInclude group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-yaml", version: "2.6.2"
 	compileInclude group: "com.google.guava", name: "guava", version: "18.0"
-	compileInclude group: "com.liferay", name: "org.elasticsearch", version: "${elasticsearchVersion}.LIFERAY-PATCHED-2"
 	compileInclude group: "com.ning", name: "compress-lzf", version: "1.0.2"
 	compileInclude group: "com.spatial4j", name: "spatial4j", version: "0.5"
 	compileInclude group: "com.tdunning", name: "t-digest", version: "3.0"
@@ -24,18 +24,19 @@ dependencies {
 	compileInclude group: "io.netty", name: "netty", version: "3.10.5.Final"
 	compileInclude group: "joda-time", name: "joda-time", version: "2.8.2"
 	compileInclude group: "org.antlr", name: "antlr-runtime", version: "3.5"
-	compileInclude group: "org.apache.lucene", name: "lucene-analyzers-common", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-core", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-grouping", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-highlighter", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-join", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-memory", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-misc", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-queries", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-queryparser", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-sandbox", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-spatial", version: "5.4.1"
-	compileInclude group: "org.apache.lucene", name: "lucene-suggest", version: "5.4.1"
+	compileInclude group: "org.apache.lucene", name: "lucene-analyzers-common", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-core", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-grouping", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-highlighter", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-join", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-memory", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-misc", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-queries", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-queryparser", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-sandbox", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-spatial", version: luceneVersion
+	compileInclude group: "org.apache.lucene", name: "lucene-suggest", version: luceneVersion
+	compileInclude group: "org.elasticsearch", name: "elasticsearch", version: elasticsearchVersion
 	compileInclude group: "org.joda", name: "joda-convert", version: "1.2"
 	compileInclude group: "org.noggit", name: "noggit", version: "0.6"
 	compileInclude group: "org.ow2.asm", name: "asm", version: "4.1"
