Upgrade ElasticSearch to 5.0 - update default settings

--- a/modules/apps/foundation/portal-search/portal-search-elasticsearch/src/main/resources/META-INF/elasticsearch-optional-defaults.yml
+++ b/modules/apps/foundation/portal-search/portal-search-elasticsearch/src/main/resources/META-INF/elasticsearch-optional-defaults.yml
@@ -28,6 +28,6 @@ monitor.jvm.gc.young.debug: 400ms
 monitor.jvm.gc.young.info: 700ms
 monitor.jvm.gc.young.warn: 1000ms
 
-threadpool:
+thread_pool:
     bulk:
         queue_size: 100
