--- a/modules/apps/foundation/portal-search/portal-search-elasticsearch/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/portal-search/portal-search-elasticsearch/src/main/resources/content/Language.properties
@@ -7,6 +7,7 @@ client-transport-nodes-sampler-interval-help=Instructs the client node on how of
 client-transport-sniff-help=If this is checked, cluster sniffing is enabled to dynamically discover available nodes in the cluster.
 cluster-name-help=The name of the cluster to join. The name should match the remote cluster when Operation Mode is set to remote.
 discovery-zen-ping-unicast-hosts-port-help=Range of ports to use when building the discovery.zen.ping.unicast.hosts value. Multiple Elasticsearch nodes on a range of ports can act as gossip routers at the same computer.
+elastic.facet.configuration.name=Elasticsearch Facet Configuration
 elastic.search.configuration.name=Elasticsearch
 http-cors-allow-origin-help=Origins to allow when HTTP CORS is enabled.
 http-cors-configurations-help=Custom settings for HTTP CORS, in YML format (elasticsearch.yml).
