LPS-71971 Add portal settings configuration for OpenId Connect

--- a/modules/apps/foundation/portal-settings/portal-settings-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/portal-settings/portal-settings-lang/src/main/resources/content/Language.properties
@@ -99,6 +99,7 @@ main-configuration=Main Configuration
 mappings-for-opensso-help=The mandatory mappings between OpenSSO and Liferay are: Screen Name, Email Address, First Name, and Last Name.
 no-such-user-redirect-url=No Such User Redirect URL
 oauth-redirect-url=Redirect URL
+openid-connect=OpenId Connect
 opensso=OpenSSO
 organization-sites=Organization Sites
 other-directory-server=Other Directory Server
