--- a/modules/apps/forms-and-workflow/calendar/calendar-service/build.gradle
+++ b/modules/apps/forms-and-workflow/calendar/calendar-service/build.gradle
@@ -16,7 +16,6 @@ dependencies {
 	provided group: "com.liferay", name: "com.liferay.petra.function", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.petra.string", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql", version: "1.0.0"
-	provided group: "com.liferay", name: "com.liferay.portal.search.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.security.service.access.policy.api", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.upgrade", version: "2.0.0"
@@ -34,6 +33,7 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:collaboration:message-boards:message-boards-api")
 	provided project(":apps:forms-and-workflow:calendar:calendar-api")
+	provided project(":apps:foundation:portal-search:portal-search-api")
 	provided project(":apps:foundation:portal:portal-instance-lifecycle-api")
 	provided project(":apps:web-experience:export-import:export-import-api")
 	provided project(":apps:web-experience:rss:rss-api")
